--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,15 +26,91 @@
         <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="inacio.png" alt="Figura do Inácio">
-            <h3 class="estudante-nome">Inácio</h3>
-            <img src="github.png" class="estudante-icone" alt="Ícone GitHub">
-            <img src="linkedin.png" class="estudante-icone" alt="Ícone LinkIn">
-            <img src="instagram.png" class="estudante-icone" alt="Ícone Instagram">
+        <h2 class="estudante-titulo">Quem são nossos estudante?</h2>
+        <div class="estudante-todos">
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="inacio.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Inácio</h3>
+                <a href="https://github.com/silviosnjr">
+                    <img class="estudante-icone" src="github.png" alt="Ícone do gitHub">
+                </a>
+                <a href="#">
+                    <img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram">
+                </a>  
+                <a href="#">
+                    <img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin">
+                </a> 
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="bento.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Bento</h3>
+                <a href="https://github.com/silviosnjr">
+                    <img class="estudante-icone" src="github.png" alt="Ícone do gitHub">
+                </a>
+                <a href="#">
+                    <img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram">
+                </a>  
+                <a href="#">
+                    <img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin">
+                </a> 
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="felipe.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Felipe</h3>
+                <a href="https://github.com/silviosnjr"><img class="estudante-icone" src="github.png" alt="Ícone do gitHub"></a>
+                <a href="#"><img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram"></a>  
+                <a href="#"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a> 
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="joana.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Joana</h3>
+                <a href="https://github.com/silviosnjr"><img class="estudante-icone" src="github.png" alt="Ícone do gitHub"></a>
+                <a href="#"><img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram"></a>  
+                <a href="#"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a> 
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="joana.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Joana</h3>
+                <a href="https://github.com/silviosnjr"><img class="estudante-icone" src="github.png" alt="Ícone do gitHub"></a>
+                <a href="#"><img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram"></a>  
+                <a href="#"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a> 
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="maria.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Maria </h3>
+                <a href="https://github.com/silviosnjr"><img class="estudante-icone" src="github.png" alt="Ícone do gitHub"></a>
+                <a href="#"><img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram"></a>  
+                <a href="#"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a> 
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="joana.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Joana</h3>
+                <a href="https://github.com/silviosnjr"><img class="estudante-icone" src="github.png" alt="Ícone do gitHub"></a>
+                <a href="#"><img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram"></a>  
+                <a href="#"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a> 
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="nicolas.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Nicolas</h3>
+                <a href="https://github.com/silviosnjr"><img class="estudante-icone" src="github.png" alt="Ícone do gitHub"></a>
+                <a href="#"><img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram"></a>  
+                <a href="#"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a> 
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="tereza.png" alt="Foto do Inácio">
+                <h3 class="estudante-nome">Tereza</h3>
+                <a href="https://github.com/silviosnjr"><img class="estudante-icone" src="github.png" alt="Ícone do gitHub"></a>
+                <a href="#"><img class="estudante-icone" src="instagram.png" alt="Ícone do Instagram"></a>  
+                <a href="#"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a> 
+            </div>
         </div>
     </section>
+
 </body>
 
 </html>
